Reset menu item

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
         <script src="js/libs/separator.js?version=1"></script>
         <script src="js/libs/colorlib.js?version=1"></script>
 
-        <script src="js/main/base.js?version=33"></script>
+        <script src="js/main/base.js?version=34"></script>
         <script src="js/main/utils.js?version=4"></script>
         <script src="js/main/pieces.js?version=29"></script>
         <script src="js/main/grid.js?version=1"></script>
         <script src="js/main/keyboard.js?version=11"></script>
         <script src="js/main/local_storage.js?version=1"></script>
-        <script src="js/main/options.js?version=20"></script>
-        <script src="js/main/controls.js?version=5"></script>
+        <script src="js/main/options.js?version=21"></script>
+        <script src="js/main/controls.js?version=6"></script>
         <script src="js/main/textures.js?version=1"></script>
-        <script src="js/main/theme.js?version=9"></script>
+        <script src="js/main/theme.js?version=10"></script>
 
         <script>
             $(function()
@@ -107,6 +107,7 @@
             <div id='menu_options' class='menu_item action'>Options</div>
             <div id='menu_controls' class='menu_item action'>Controls</div>
             <div id='menu_theme' class='menu_item action'>Theme</div>
+            <div id='menu_reset' class='menu_item action'>Reset</div>
             <div id='menu_help' class='menu_item action'>Help</div>
         </div>
     </script>
