--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
         <script src="js/main/base.js?version=37"></script>
         <script src="js/main/utils.js?version=4"></script>
-        <script src="js/main/pieces.js?version=31"></script>
+        <script src="js/main/pieces.js?version=32"></script>
         <script src="js/main/grid.js?version=1"></script>
         <script src="js/main/keyboard.js?version=12"></script>
         <script src="js/main/local_storage.js?version=1"></script>
-        <script src="js/main/options.js?version=22"></script>
+        <script src="js/main/options.js?version=23"></script>
         <script src="js/main/controls.js?version=7"></script>
         <script src="js/main/textures.js?version=1"></script>
         <script src="js/main/theme.js?version=11"></script>
@@ -256,6 +256,10 @@
                     <div class='options_item'>
                         <div class='options_label'>Line Clears To Level Up</div>
                         <input type='number' min="1" id='option_level_goal' class='options_widget options_number' data-options-widget-type='number'>
+                    </div>
+                    <div class='options_item'>
+                        <div class='options_label'>Hold</div>
+                        <input type='checkbox' id='option_hold' class='options_widget options_checkbox' data-options-widget-type='checkbox'>
                     </div>
                 </div>
                 <div id='options_category_goal' class='options_category'>
