--- a/index.html
+++ b/index.html
@@ -472,7 +472,6 @@
                     <option value='70'>70%</option>
                     <option value='80'>80%</option>
                     <option value='90'>90%</option>
-                    <option value='100'>100%</option>
                 </select>
             </div>
             <div class='theme_item'>
@@ -509,6 +508,14 @@
                     <option value='80'>80%</option>
                     <option value='90'>90%</option>
                     <option value='100'>100%</option>
+                </select>
+            </div>
+            <div class='theme_item'>
+                <div class='theme_label'>Background Transparency</div>
+                <select id='theme_background_transparency'>
+                    <option value='none'>None</option>
+                    <option value='small'>Small</option>
+                    <option value='big'>Big</option>
                 </select>
             </div>
             <div class='theme_item'>
