--- a/index.html
+++ b/index.html
@@ -230,11 +230,11 @@
                         </select>
                     </div>
                     <div class='options_item' id='options_item_piece_picker_goal'>
-                        <div class='options_label'>Line Clears To Show Piece Picker</div>
+                        <div class='options_label'>Line Clears<br>To Show Piece Picker</div>
                         <input type='number' min="1" id='option_piece_picker_goal' class='options_widget options_number' data-options-widget-type='number'>
                     </div>
                     <div class='options_item' id='options_item_piece_picker_queue'>
-                        <div class='options_label'>Amount Of Picked Piece To Place</div>
+                        <div class='options_label'>Amount Of<br>Picked Piece To Place</div>
                         <input type='number' min="1" id='option_piece_picker_queue' class='options_widget options_number' data-options-widget-type='number'>
                     </div>
                     <div class='options_item'>
@@ -242,7 +242,7 @@
                         <input type='checkbox' id='option_big_pieces' class='options_widget options_checkbox' data-options-widget-type='checkbox'>
                     </div>
                     <div class='options_item' id='options_item_big_piece_goal'>
-                        <div class='options_label'>Pieces Before Big Piece</div>
+                        <div class='options_label'>Pieces Before<br>Big Piece</div>
                         <input type='number' min="1" id='option_big_piece_goal' class='options_widget options_number' data-options-widget-type='number'>
                     </div>
                     <div class='options_item'>
@@ -250,11 +250,11 @@
                         <input type='checkbox' id='option_pow' class='options_widget options_checkbox' data-options-widget-type='checkbox'>
                     </div>
                     <div class='options_item' id='options_item_pow_goal'>
-                        <div class='options_label'>Line Clears To Earn POW</div>
+                        <div class='options_label'>Line Clears<br>To Earn POW</div>
                         <input type='number' min="1" id='option_pow_goal' class='options_widget options_number' data-options-widget-type='number'>
                     </div>
                     <div class='options_item'>
-                        <div class='options_label'>Line Clears To Level Up</div>
+                        <div class='options_label'>Line Clears<br>To Level Up</div>
                         <input type='number' min="1" id='option_level_goal' class='options_widget options_number' data-options-widget-type='number'>
                     </div>
                     <div class='options_item'>
