--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
                 </select>
             </div>
             <div class='theme_item'>
-                <div class='theme_label'>Ghost Transparency</div>
+                <div class='theme_label'>Ghost<br>Transparency</div>
                 <select id='theme_ghost_transparency'>
                     <option value='0'>None</option>
                     <option value='10'>10%</option>
@@ -479,7 +479,7 @@
                 <input type='color' class='theme_color' id='theme_color_grid'>
             </div>
             <div class='theme_item'>
-                <div class='theme_label'>Grid Transparency</div>
+                <div class='theme_label'>Grid<br>Transparency</div>
                 <select id='theme_grid_transparency'>
                     <option value='0'>None</option>
                     <option value='10'>10%</option>
@@ -495,7 +495,7 @@
                 </select>
             </div>
             <div class='theme_item'>
-                <div class='theme_label'>Grid Lines Contrast</div>
+                <div class='theme_label'>Grid Lines<br>Contrast</div>
                 <select id='theme_grid_lines_contrast'>
                     <option value='0'>None</option>
                     <option value='10'>10%</option>
@@ -511,7 +511,7 @@
                 </select>
             </div>
             <div class='theme_item'>
-                <div class='theme_label'>Background Transparency</div>
+                <div class='theme_label'>Background<br>Transparency</div>
                 <select id='theme_background_transparency'>
                     <option value='none'>None</option>
                     <option value='small'>Small</option>
