--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Archon Tetris</title>
         <link rel='shortcut icon' href='img/favicon.png?version=1' type='image/x-icon'>
 
-        <link rel="stylesheet" type="text/css" href="css/style.css?version=33">
+        <link rel="stylesheet" type="text/css" href="css/style.css?version=34">
 
         <script src="js/libs/jquery.min.js?version=1"></script>
         <script src="js/libs/seedrandom.min.js?version=1"></script>
@@ -326,15 +326,15 @@
                 <input type='text' id='control_hold' data-category='game' class='controls_input'>
             </div>
             <div class='controls_item'>
-                <div class='controls_label'>Piece Picker: Next</div>
+                <div class='controls_label'>Piece Picker<br>Next</div>
                 <input type='text' id='control_piece_picker_next' data-category='piece_picker' class='controls_input'>
             </div>
             <div class='controls_item'>
-                <div class='controls_label'>Piece Picker: Previous</div>
+                <div class='controls_label'>Piece Picker<br>Previous</div>
                 <input type='text' id='control_piece_picker_previous' data-category='piece_picker' class='controls_input'>
             </div>
             <div class='controls_item'>
-                <div class='controls_label'>Piece Picker: Select</div>
+                <div class='controls_label'>Piece Picker<br>Select</div>
                 <input type='text' id='control_piece_picker_select' data-category='piece_picker' class='controls_input'>
             </div>
             <div class='controls_item'>
