--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <script src="js/libs/separator.js?version=1"></script>
         <script src="js/libs/colorlib.js?version=1"></script>
         
-        <script src="js/main/base.js?version=44"></script>
+        <script src="js/main/base.js?version=45"></script>
         <script src="js/main/utils.js?version=6"></script>
         <script src="js/main/pieces.js?version=34"></script>
         <script src="js/main/grid.js?version=1"></script>
@@ -63,7 +63,7 @@
                     </div>
                     <div id='friend'>
                         <div id='friend_element'></div>
-                        <div id='friend_info'></div>
+                        <div id='friend_info' class='unselectable'></div>
                     </div>
                 </div>
                 <div id='sidebar_right'>
