--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <script src="js/libs/separator.js?version=1"></script>
         <script src="js/libs/colorlib.js?version=1"></script>
         
-        <script src="js/main/base.js?version=46"></script>
+        <script src="js/main/base.js?version=47"></script>
         <script src="js/main/utils.js?version=6"></script>
         <script src="js/main/pieces.js?version=35"></script>
         <script src="js/main/grid.js?version=1"></script>
@@ -109,6 +109,7 @@
         <audio preload id='sound_woosh' src='audio/woosh.mp3?version=4'></audio>
         <audio preload id='sound_pow_loaded' src='audio/pow_loaded.mp3?version=4'></audio>
         <audio preload id='sound_hold' src='audio/hold.mp3?version=2'></audio>
+        <audio preload id='sound_friend' src='audio/friend.mp3?version=2'></audio>
     </body>
 
     <script id='template_menu' type='text/x-handlebars-template' class='template'>
