--- a/index.html
+++ b/index.html
@@ -404,6 +404,9 @@
                 After a certain amount of pieces are placed, a big piece appears.
             </div>
             <div class='help_item'>
+                Friends appear after a certain amount of lines are cleared. They affect properties like speed and score. They disappear after some pieces are placed.
+            </div>
+            <div class='help_item'>
                 Settings are highly configurable. Check Options, Controls, and Theme.
             </div>
             <div class='unselectable' id='help_buttons'>
