Active piece option

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <script src="js/main/grid.js?version=1"></script>
         <script src="js/main/keyboard.js?version=12"></script>
         <script src="js/main/local_storage.js?version=1"></script>
-        <script src="js/main/options.js?version=29"></script>
+        <script src="js/main/options.js?version=30"></script>
         <script src="js/main/controls.js?version=7"></script>
         <script src="js/main/textures.js?version=1"></script>
         <script src="js/main/theme.js?version=15"></script>
@@ -144,6 +144,10 @@
                     <div class='options_item'>
                         <div class='options_label'>Ghost</div>
                         <input type='checkbox' id='option_ghost' class='options_widget options_checkbox' data-options-widget-type='checkbox'>
+                    </div>
+                    <div class='options_item'>
+                        <div class='options_label'>Active Piece</div>
+                        <input type='checkbox' id='option_active_piece' class='options_widget options_checkbox' data-options-widget-type='checkbox'>
                     </div>
                     <div class='options_item'>
                         <div class='options_label'>Rows</div>
