Active piece option mod

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         <input type='checkbox' id='option_ghost' class='options_widget options_checkbox' data-options-widget-type='checkbox'>
                     </div>
                     <div class='options_item'>
-                        <div class='options_label'>Active Piece</div>
+                        <div class='options_label'>Current Piece<br>In Preview</div>
                         <input type='checkbox' id='option_active_piece' class='options_widget options_checkbox' data-options-widget-type='checkbox'>
                     </div>
                     <div class='options_item'>
