--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
                     <div id='countdown' class='game_box unselectable'>3</div>
                     <div id='paused' class='game_box unselectable'>Paused</div>
                 </div>
-                <div id='sidebar_left'>
+                <div id='sidebar_left' class='unselectable'>
                     <div id='hold_piece'>
                         <div id='hold_piece_element'>Hold</div>
                     </div>
                     <div id='friend'>
                         <div id='friend_element'></div>
-                        <div id='friend_info' class='unselectable'></div>
+                        <div id='friend_info'></div>
                     </div>
                 </div>
-                <div id='sidebar_right'>
+                <div id='sidebar_right' class='unselectable'>
                     <div id='active_piece'>
                         <div id='active_piece_element'></div>
                         <div id='queued_left'></div>
