--- a/index.html
+++ b/index.html
@@ -511,8 +511,8 @@
             <div id="texture_preview_element"></div>
 
             <div id="texture_preview_buttons" class="unselectable">
-                <div id="texture_preview_random" class="preview_button">Random</div>
-                <div id="texture_preview_previous" class="preview_button">Previous</div>
+                <div id="texture_preview_random" class="action">Random</div>
+                <div id="texture_preview_previous" class="action">Previous</div>
             </div>
         </div>
     </script>
